Enable grouping of dependabot's PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,8 @@ updates:
     allow:
       # Allow both direct and indirect updates for all packages
       - dependency-type: "all"
+    # Update multiple dependencies in single PR
+    groups:
+      pip:
+        patterns:
+        - "*"
